# Full-Future-ViewAPP-REST

./: CMakeLists.txt  Make_dir.mk  Makefile  Readme_server.md  start.sh
front/: package-lock.json  package.json
front/public/: index__.html  style.css
front/src/: App.css  App.js  Footer.js  Header.js  Info.js
front/src/Components/: Header.css  Header.js  Nav.js
server/: app.py
server/templates/: about.html  based.html  index.html
src/: main.cpp
src/JsonFile/: Info.json
src/config/: Settings.json  config.cpp  config.h
src/config/Observer/: Observer.cpp  Observer.h
src/debud/: debug.h
src/debug/: debug.h
src/server/: Server.cpp  Server.h
src/server/Request/: RequestHandler.cpp  RequestHandler.h
src/server/Request/Methods/DELETE/: DELETE.cpp  DELETE.h
src/server/Request/Methods/GET/: GET.cpp  GET.h
src/server/Request/Methods/POST/: POST.cpp  POST.h
src/server/Request/Methods/PUT/: PUT.cpp  PUT.h
src/server/Request/RequestFactory/: RequestFactory.cpp  RequestFactory.h
src/server/Request/RequestHandlerFront/: RequestHandlerFront.cpp  RequestHandlerFront.h
src/server/Request/RequestObject/ModelRequest/: ModelRequest.cpp  ModelRequest.h
src/server/Request/RequestObject/ObjectBase/: ObjectBase.h
src/server/Request/include/: Error.h  Method.h
